[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/inventory/inventoryTab.gd" type="Script" id=1]
[ext_resource path="res://tools/item/saveConfirm.gd" type="Script" id=2]

[node name="Inventory" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="mainSeparator" type="HBoxContainer" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -665.796, 0 )

[node name="fileList" type="ItemList" parent="background/mainSeparator"]
margin_right = 130.0
margin_bottom = 768.0
rect_min_size = Vector2( 130, 0 )
size_flags_vertical = 3

[node name="dataPanel" type="PanelContainer" parent="background/mainSeparator"]
margin_left = 134.0
margin_right = 754.0
margin_bottom = 768.0
rect_min_size = Vector2( 620, 0 )
size_flags_vertical = 3

[node name="dataContainer" type="VBoxContainer" parent="background/mainSeparator/dataPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 613.0
margin_bottom = 761.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="identification" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_right = 606.0
margin_bottom = 94.0
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblIdentification" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/title"]
margin_right = 170.0
margin_bottom = 22.0
text = "↳ Identification "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/identification/title"]
margin_left = 174.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 94.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields"]
margin_left = 6.0
margin_right = 600.0
margin_bottom = 68.0
rect_min_size = Vector2( 594, 0 )
columns = 2

[node name="lblName" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 27.0
text = "Name"

[node name="txtName" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 114.0
margin_right = 594.0
margin_bottom = 32.0
clear_button_enabled = true

[node name="lblShortName" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_top = 41.0
margin_right = 110.0
margin_bottom = 63.0
text = "Short name "

[node name="txtShortName" type="LineEdit" parent="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid"]
margin_left = 114.0
margin_top = 36.0
margin_right = 594.0
margin_bottom = 68.0
size_flags_horizontal = 3
clear_button_enabled = true

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 98.0
margin_right = 606.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 15 )

[node name="Contents" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 117.0
margin_right = 606.0
margin_bottom = 703.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="title" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/Contents"]
margin_right = 606.0
margin_bottom = 22.0

[node name="lblIdentification" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Contents/title"]
margin_right = 110.0
margin_bottom = 22.0
text = "↳ Contents "

[node name="HSeparator2" type="HSeparator" parent="background/mainSeparator/dataPanel/dataContainer/Contents/title"]
margin_left = 114.0
margin_right = 606.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="fields" type="CenterContainer" parent="background/mainSeparator/dataPanel/dataContainer/Contents"]
margin_top = 26.0
margin_right = 606.0
margin_bottom = 90.0

[node name="grid" type="GridContainer" parent="background/mainSeparator/dataPanel/dataContainer/Contents/fields"]
margin_left = 76.0
margin_right = 530.0
margin_bottom = 64.0
columns = 4

[node name="txtWeapon" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 25.0
text = " Weapon "

[node name="optWeapon" type="OptionButton" parent="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid"]
margin_left = 84.0
margin_right = 230.0
margin_bottom = 28.0
rect_min_size = Vector2( 146, 0 )
align = 1

[node name="txtArmor" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid"]
margin_left = 234.0
margin_top = 3.0
margin_right = 304.0
margin_bottom = 25.0
text = " Armor "

[node name="optArmor" type="OptionButton" parent="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid"]
margin_left = 308.0
margin_right = 454.0
margin_bottom = 28.0
rect_min_size = Vector2( 146, 0 )
size_flags_horizontal = 0
align = 1

[node name="lblMoney" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid"]
margin_top = 37.0
margin_right = 80.0
margin_bottom = 59.0
text = " Money "

[node name="spnMoney" type="SpinBox" parent="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid"]
margin_left = 84.0
margin_top = 32.0
margin_right = 230.0
margin_bottom = 64.0
max_value = 9999.0

[node name="listsContainer" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/Contents"]
margin_top = 94.0
margin_right = 606.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="itemsContainer" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/Contents/listsContainer"]
margin_right = 301.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="lblItems" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Contents/listsContainer/itemsContainer"]
margin_right = 301.0
margin_bottom = 22.0
text = "Items ⬎"
align = 1

[node name="items" type="ItemList" parent="background/mainSeparator/dataPanel/dataContainer/Contents/listsContainer/itemsContainer"]
margin_top = 26.0
margin_right = 301.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_reselect = true

[node name="weaponsContainer" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/Contents/listsContainer"]
margin_left = 305.0
margin_right = 606.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="lblWeapons" type="Label" parent="background/mainSeparator/dataPanel/dataContainer/Contents/listsContainer/weaponsContainer"]
margin_right = 301.0
margin_bottom = 22.0
text = "Weapons ⬎"
align = 1

[node name="weapons" type="ItemList" parent="background/mainSeparator/dataPanel/dataContainer/Contents/listsContainer/weaponsContainer"]
margin_top = 26.0
margin_right = 301.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_reselect = true

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 707.0
margin_right = 606.0
margin_bottom = 722.0
rect_min_size = Vector2( 0, 15 )

[node name="buttons" type="VBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer"]
margin_top = 726.0
margin_right = 606.0
margin_bottom = 754.0
size_flags_horizontal = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="background/mainSeparator/dataPanel/dataContainer/buttons"]
margin_right = 606.0
margin_bottom = 28.0
alignment = 1

[node name="Control" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_right = 126.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="btnSave" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 130.0
margin_right = 256.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Save|Create"

[node name="Control2" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 260.0
margin_right = 310.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )

[node name="btnReload" type="Button" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 314.0
margin_right = 476.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Reload entities"

[node name="Control3" type="Control" parent="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer"]
margin_left = 480.0
margin_right = 606.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="saveConfirm" type="ConfirmationDialog" parent="."]
margin_right = 218.0
margin_bottom = 74.0
script = ExtResource( 2 )

[connection signal="item_selected" from="background/mainSeparator/fileList" to="." method="_on_fileList_item_selected"]
[connection signal="text_changed" from="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid/txtName" to="." method="_on_txtName_text_changed"]
[connection signal="text_changed" from="background/mainSeparator/dataPanel/dataContainer/identification/fields/grid/txtShortName" to="." method="_on_txtShortName_text_changed"]
[connection signal="item_selected" from="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid/optWeapon" to="." method="_on_optWeapon_item_selected"]
[connection signal="item_selected" from="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid/optArmor" to="." method="_on_optArmor_item_selected"]
[connection signal="value_changed" from="background/mainSeparator/dataPanel/dataContainer/Contents/fields/grid/spnMoney" to="." method="_on_spnMoney_value_changed"]
[connection signal="pressed" from="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer/btnSave" to="." method="_on_btnSave_pressed"]
[connection signal="pressed" from="background/mainSeparator/dataPanel/dataContainer/buttons/HBoxContainer/btnReload" to="." method="_on_btnReload_pressed"]
[connection signal="confirmed" from="saveConfirm" to="." method="_on_saveConfirm_confirmed"]
